// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RelationInputType should create an input type with a custom id for the parent 1`] = `
type Query {
  test(input: RelationCustomParentIdInput!): Int!
}

input RelationCustomParentIdInput {
  """The id of the record."""
  id: String!

  """The id of relation."""
  relationId: ID!
}

`;

exports[`RelationInputType should create an input type with a custom id for the parent and relation 1`] = `
type Query {
  test(input: RelationCustomParentAndRelationIdInput!): Int!
}

input RelationCustomParentAndRelationIdInput {
  """The id of the record."""
  id: String!

  """The id of relation."""
  relationId: String!
}

`;

exports[`RelationInputType should create an input type with a custom id for the relation 1`] = `
type Query {
  test(input: RelationCustomRelationIdInput!): Int!
}

input RelationCustomRelationIdInput {
  """The id of the record."""
  id: ID!

  """The id of relation."""
  relationId: String!
}

`;

exports[`RelationInputType should create an input type with an id and relationId 1`] = `
type Query {
  test(input: RelationInput!): Int!
}

input RelationInput {
  """The id of the record."""
  id: ID!

  """The id of relation."""
  relationId: ID!
}

`;
